prevent overlap of text and topics

--- a/src/assets/scss/general/global.scss
+++ b/src/assets/scss/general/global.scss
@@ -115,3 +115,6 @@
   background-color: #EAEDF0;
   box-shadow: inset 0 1px 0 0 #EAEDF0;
 }
+.no-overlap {
+  margin-bottom: 40px;
+}
